--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
 
     <!-- Разрешение камеры для сканирования штрих-кодов -->
     <uses-permission android:name="android.permission.CAMERA" />
+    <!-- Разрешение интернета для проверки обновлений -->
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
 
